--- a/templates/home.html
+++ b/templates/home.html
@@ -66,11 +66,11 @@
             </div>
             <div class='line'>
                 <label for="longitude">longitude</label>
-                <input name="longitude" type="number" step="0.00000001" min="29" value="35" max="41" placeholder="1234" required><br>
+                <input name="longitude" type="number" step="0.00000001" min="29" value="{{  longitude  }}" max="41" placeholder="1234" required><br>
             </div>
             <div class='line'>
                 <label for="latitude">latitude</label>
-                <input name="latitude" type="number" step="0.00000001" value="-6.5" max="-1" min="-12" placeholder="1234" required><br>
+                <input name="latitude" type="number" step="0.00000001" value="{{  latitude  }}" max="-1" min="-12" placeholder="1234" required><br>
             </div>
             <div class='line'>
                 <label for="wpt_name">wpt_name</label>
