--- a/templates/home.html
+++ b/templates/home.html
@@ -31,8 +31,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}"> 
-   <!-- <link rel="stylesheet" href="../static/styles/styles.css"> -->
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">  -->
+   <link rel="stylesheet" href="../static/styles/styles.css">
     <title>Pump it Up: Data Mining the Water Table</title>
 </head>
 
@@ -66,15 +66,15 @@
             </div>
             <div class='line'>
                 <label for="longitude">longitude</label>
-                <input name="longitude" type="number" step="0.00000001" min="29" value="{{  longitude  }}" max="41" placeholder="1234" required><br>
+                <input name="longitude" type="number" onkeyup="myFunction()" step="0.00000001" min="29" value="{{ longitude }}" max="41" placeholder="1234" required><br>
             </div>
             <div class='line'>
                 <label for="latitude">latitude</label>
-                <input name="latitude" type="number" step="0.00000001" value="{{  latitude  }}" max="-1" min="-12" placeholder="1234" required><br>
+                <input name="latitude" type="number" onkeyup="myFunction()" step="0.00000001" value="{{ latitude }}" max="-1" min="-12" placeholder="1234" required><br>
             </div>
             <div class='line'>
                 <label for="wpt_name">wpt_name</label>
-                <input name="wpt_name" type="text" placeholder="public pump" required><br>
+                <input name="wpt_name" type="text" placeholder="pump name" required><br>
             </div>
             <div class='line'>
                 <label for="num_private">num_private</label>
@@ -200,14 +200,15 @@
                 <input type="submit" name="submit"></div>
                 <h1 id="predict"> prediction : {{ prediction }}</h1>
         </form>
-        <button onclick="myFunction()">Refresh/show map</button>
-        <button onclick="myFunction2()">clear map</button>
+        <div class="buttons">
+        <button class="show-map" onclick="myFunction()">Refresh/show map</button>
+        <button class="hide-map" onclick="myFunction2()">clear map</button></div>
         <div id="map_folium"><div class="folium-map" id="map_099a3fa751d44262b004a99bacb740b9" ></div></div>
-        <script src="{{ url_for('static', filename='script/script2.js') }}"></script>
-        <script src="{{ url_for('static', filename='script/script.js') }}"></script> 
+        <!-- <script src="{{ url_for('static', filename='script/script2.js') }}"></script> -->
+        <!-- <script src="{{ url_for('static', filename='script/script.js') }}"></script>  -->
          
-         <!-- <script src="../static/script/script.js"></script> -->
-         <!-- <script src="../static/script/script2.js"></script> -->
+         <script src="../static/script/script.js"></script>
+         <script src="../static/script/script2.js"></script>
     </div>
 
 </body>
