--- a/templates/home.html
+++ b/templates/home.html
@@ -4,40 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <script>L_PREFER_CANVAS=false; L_NO_TOUCH=false; L_DISABLE_3D=false;</script>
+    <script>L_PREFER_CANVAS = false; L_NO_TOUCH = false; L_DISABLE_3D = false;</script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.4.0/dist/leaflet.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
-    <link rel="stylesheet" href="https://rawcdn.githack.com/python-visualization/folium/master/folium/templates/leaflet.awesome.rotate.css"/>
-    <style>html, body {width: 100%;height: 100%;margin: 0;padding: 0;}</style>
-    <style>#map {position:absolute;top:0;bottom:0;right:0;left:0;}</style>
-    
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.4.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" />
+    <link rel="stylesheet"
+        href="https://rawcdn.githack.com/python-visualization/folium/master/folium/templates/leaflet.awesome.rotate.css" />
+    <style>
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <style>
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+        }
+    </style>
+
     <meta name="viewport" content="width=device-width,
         initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style>#map_099a3fa751d44262b004a99bacb740b9 {
-        position: relative;
-        width: 100.0%;
-        height: 100.0%;
-        left: 0.0%;
-        top: 0.0%;
+    <style>
+        #map_099a3fa751d44262b004a99bacb740b9 {
+            position: relative;
+            width: 100.0%;
+            height: 100.0%;
+            left: 0.0%;
+            top: 0.0%;
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">  -->
-   <link rel="stylesheet" href="../static/styles/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
+    <!-- <link rel="stylesheet" href="../static/styles/styles.css"> -->
     <title>Pump it Up: Data Mining the Water Table</title>
 </head>
 
 <body>
-    <div id="title"><h1 class="title">Pump it Up: Data Mining the Water Table</h1></div>
+    <div id="title">
+        <h1 class="title">Pump it Up: Data Mining the Water Table</h1>
+    </div>
     <div id="form">
         <form action="/" method="POST">
             <div class='line'>
@@ -66,11 +88,13 @@
             </div>
             <div class='line'>
                 <label for="longitude">longitude</label>
-                <input name="longitude" type="number" onkeyup="myFunction()" step="0.00000001" min="29" value="{{ longitude }}" max="41" placeholder="1234" required><br>
+                <input name="longitude" type="number" onkeyup="myFunction()" step="0.00000001" min="29"
+                    value="{{ longitude }}" max="41" placeholder="1234" required><br>
             </div>
             <div class='line'>
                 <label for="latitude">latitude</label>
-                <input name="latitude" type="number" onkeyup="myFunction()" step="0.00000001" value="{{ latitude }}" max="-1" min="-12" placeholder="1234" required><br>
+                <input name="latitude" type="number" onkeyup="myFunction()" step="0.00000001" value="{{ latitude }}"
+                    max="-1" min="-12" placeholder="1234" required><br>
             </div>
             <div class='line'>
                 <label for="wpt_name">wpt_name</label>
@@ -82,7 +106,7 @@
             </div>
             <div class='line'>
                 <label for="basin">basin</label>
-                <select id="basin" name="basin" required ></select><br>
+                <select id="basin" name="basin" required></select><br>
             </div>
             <div class='line'>
                 <label for="subvillage">subvillage</label>
@@ -90,7 +114,7 @@
             </div>
             <div class='line'>
                 <label for="region">region</label>
-                <select id="region" onchange="region_code_fun()" name='region' required></select><br>
+                <select id="region" onchange="region_code_fun()" name='region' value="region" required></select><br>
             </div>
             <div class='line'>
                 <label for="region_code">region_code</label>
@@ -110,7 +134,7 @@
             </div>
             <div class='line'>
                 <label for="population">population</label>
-                <input name="population" type="number" min="0" placeholder="1234"required><br>
+                <input name="population" type="number" min="0" placeholder="1234" required><br>
             </div>
             <div class='line'>
                 <label for="public_meeting">public_meeting</label>
@@ -154,7 +178,7 @@
             </div>
             <div class='line'>
                 <label for="management">management</label>
-                <select id="management" name="management"required></select><br>
+                <select id="management" name="management" required></select><br>
             </div>
             <div class='line'>
                 <label for="payment">payment</label>
@@ -190,25 +214,30 @@
             </div>
             <div class='line'>
                 <label for="waterpoint_type_group">waterpoint_type_group</label>
-                <select id="waterpoint_type_group" name="waterpoint_type_group" onchange='waterpoint_type_fun()' required></select><br>
+                <select id="waterpoint_type_group" name="waterpoint_type_group" onchange='waterpoint_type_fun()'
+                    required></select><br>
             </div>
             <div class='line'>
                 <label for="waterpoint_type">waterpoint_type</label>
                 <select id="waterpoint_type" name="waterpoint_type" required></select><br>
             </div>
             <div class='line'>
-                <input type="submit" name="submit"></div>
-                <h1 id="predict"> prediction : {{ prediction }}</h1>
+                <input type="submit" name="submit">
+            </div>
+            <h1 id="predict"> prediction : {{ prediction }}</h1>
         </form>
         <div class="buttons">
-        <button class="show-map" onclick="myFunction()">Refresh/show map</button>
-        <button class="hide-map" onclick="myFunction2()">clear map</button></div>
-        <div id="map_folium"><div class="folium-map" id="map_099a3fa751d44262b004a99bacb740b9" ></div></div>
-        <!-- <script src="{{ url_for('static', filename='script/script2.js') }}"></script> -->
-        <!-- <script src="{{ url_for('static', filename='script/script.js') }}"></script>  -->
-         
-         <script src="../static/script/script.js"></script>
-         <script src="../static/script/script2.js"></script>
+            <button class="show-map" onclick="myFunction3()">Refresh/show map</button>
+            <button class="hide-map" onclick="myFunction2()">clear map</button>
+        </div>
+        <div id="map_folium">
+            <div class="folium-map" id="map_099a3fa751d44262b004a99bacb740b9"></div>
+        </div>
+        <script src="{{ url_for('static', filename='script/script2.js') }}"></script> 
+         <script src="{{ url_for('static', filename='script/script.js') }}"></script>  
+
+        <!-- <script src="../static/script/script.js"></script>
+        <script src="../static/script/script2.js"></script> -->
     </div>
 
 </body>
