--- a/templates/home.html
+++ b/templates/home.html
@@ -233,11 +233,11 @@
         <div id="map_folium">
             <div class="folium-map" id="map_099a3fa751d44262b004a99bacb740b9"></div>
         </div>
-        <script src="{{ url_for('static', filename='script/script2.js') }}"></script> 
+        <!-- <script src="{{ url_for('static', filename='script/script2.js') }}"></script>  -->
          <script src="{{ url_for('static', filename='script/script.js') }}"></script>  
 
-        <!-- <script src="../static/script/script.js"></script>
-        <script src="../static/script/script2.js"></script> -->
+        <!-- <script src="../static/script/script.js"></script> -->
+        <!--<script src="../static/script/script2.js"></script>-->
     </div>
 
 </body>
