--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -4,6 +4,8 @@
 #title{
     width: 100%;
     position: fixed;
+    background-color: lightgreen ;
+    font-size: 8%;
 }
 body{
     background-color: lightgreen;
@@ -23,7 +25,7 @@ form{
     justify-content: center;
     align-items: left;
     overflow: auto;
-    padding-top: 5%;
+    padding-top: 8%;
 }
 .line{
     display: flex;
@@ -35,8 +37,8 @@ form{
 }
 #predict{
     position: fixed;
-    top: 50px;
-    right: 100px;
+    top: 7%;
+    right: 4%;
 }
 #map_099a3fa751d44262b004a99bacb740b9{
     position: fixed;
@@ -67,7 +69,7 @@ form{
     }
     .title{
         text-align: center;
-        font-size: 25px;
+        font-size: 18px;
         background-color: green;
         margin: 0;
     }
